--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,4 +1,10 @@
-<form action="/api/todos" method="POST">
-    <input type="text" name="name"/>
-    <input type="submit" value="Submit"/>
-</form>
+<% include partials/header %>
+
+<button id="test">Test</button>
+<p id="text"></p>
+
+<script>
+
+
+
+</script>
